[package]
name = "image"
version = "0.1.0"
authors = ["zyc <239559238@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.81"
image = {version="0.24.2", features=["png"]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
